--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Building-Navigation-Menu</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="container-header">
-            <a href="#" class="logo-nav">Logo</a>
-            <nav class="main-nav">
-                <ul class="main-nav-list">
-                    <li><a class="main-nav-link" href="#">Home</a></li>
-                    <li><a class="main-nav-link" href="#">About</a></li>
-                    <li><a class="main-nav-link" href="#">Gallary</a></li>
-                    <li><a class="main-nav-link" href="#">Contact</a></li>
-                </ul>
-
-                <button class="btn-mobile-nav">
-                    <ion-icon name="menu" class="icon-mobile-nav"></ion-icon>
-                    <ion-icon name="close" class="icon-mobile-nav"></ion-icon>
-                </button>
-            </nav>
-            
-    </div>
+      <div class="header-container">
+        <div class="header-img">
+          <a href="#" class="logo-nav">Logo</a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav-list">
+            <li><a class="main-nav-link" href="#">Home</a></li>
+            <li><a class="main-nav-link" href="#">About</a></li>
+            <li><a class="main-nav-link" href="#">Gallary</a></li>
+            <li><a class="main-nav-link" href="#">Contact</a></li>
+          </ul>
+          <div class="btn-mobile-nav">
+            <ion-icon name="menu" class="icon-mobile-nav"></ion-icon>
+            <ion-icon name="close" class="icon-mobile-nav"></ion-icon>
+          </div>
+        </nav>
+      </div>
     </header>
-
-</body>
+  </body>
 </html>
