--- a/index.html
+++ b/index.html
@@ -3,29 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Building-Navigation-Menu</title>
+    <title>Navigation Bar</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
     <header class="header">
-      <div class="header-container">
-        <div class="header-img">
-          <a href="#" class="logo-nav">Logo</a>
-        </div>
-        <nav class="main-nav">
-          <ul class="main-nav-list">
-            <li><a class="main-nav-link" href="#">Home</a></li>
-            <li><a class="main-nav-link" href="#">About</a></li>
-            <li><a class="main-nav-link" href="#">Gallary</a></li>
-            <li><a class="main-nav-link" href="#">Contact</a></li>
-          </ul>
-          <div class="btn-mobile-nav">
-            <ion-icon name="menu" class="icon-mobile-nav"></ion-icon>
-            <ion-icon name="close" class="icon-mobile-nav"></ion-icon>
-          </div>
-        </nav>
-      </div>
+      <a href="#">
+        <img src="./img/resize.png" alt="My web Logo" class="logo" />
+      </a>
+
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a href="index.html" class="main-nav-link">Home</a></li>
+          <li><a href="about.html" class="main-nav-link">About</a></li>
+          <li><a href="contact.html" class="main-nav-link">Contact</a></li>
+          <li><a href="gallary.html" class="main-nav-link">Gallary</a></li>
+        </ul>
+      </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+        <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon>
+      </button>
     </header>
+
+    <script src="./app.js"></script>
   </body>
 </html>
