finish the navigation section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navigation Bar</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -33,6 +40,18 @@
         <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon>
       </button>
     </header>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatum
+      incidunt deserunt. Nemo, vero tempore impedit sed sint corrupti ipsam
+      culpa perferendis dolore odio facere. Minus provident consectetur ea aut?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo maxime
+      provident possimus fugiat assumenda sed id vel minus beatae similique,
+      animi esse laudantium facilis sint consequuntur architecto laboriosam
+      fugit hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Temporibus esse quam officiis! Natus, numquam. Repellendus illum totam
+      exercitationem libero quas quam quo nobis, odit iusto deserunt atque sint
+      perferendis similique?
+    </p>
 
     <script src="./app.js"></script>
   </body>
